# ELF-Infecter

./: CMakeLists.txt  README.md
include/: print-infos.h  woody.h
include/elf-utils/: elf-getters.h  elf-utils.h
src/: init_and_exit_routine.c  main.c  parse_args.c
src/elf-utils/: elf-getters.c
src/print-infos/: print_ELF_file_overview.c
